# potatao

./: .gitignore  pyproject.toml
backend/: requirements.txt  start_gateway.py  start_sso.py
backend/database/: database_config.py  pyproject.toml
backend/exceptions/: base_exception.py  exception_handler.py  pyproject.toml  register.py
backend/gateway/: app.py  gatewayapplication.py  pyproject.toml
backend/gateway/config/: application.yaml  gateway_config.py
backend/gateway/filter/: requestfilter.py
backend/model/: base_model.py  pyproject.toml  sso_model.py
backend/nacos/: nacos_client.py  nacos_event.py  nacos_life.py  pyproject.toml
backend/sso/: app.py  pyproject.toml
backend/sso/config/: application.yaml  sso_confg.py
backend/sso/controller/: sso_conctroller.py
backend/sso/requestbody/: sso_request_body.py
backend/sso/service/: sso_service.py  user_service.py
backend/utils/: config_load.py  encryption_util.py  jwt_utils.py  pyproject.toml  redisUtils.py  snowflake_id_util.py
backend/utils/decoration/: validator.py
