[project]
name = "sso"
version = "0.1.0"
description = ""
authors = [
    {name = "Sunny01",email = "whs3296116638@outlook.com"}
]
requires-python = ">=3.10,<3.11"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "*"
sqlalchemy = "*"
pydantic = "*"


nacos = { path = "../nacos", develop = true }
exceptions = { path = "../exceptions", develop = true }
utils = { path = "../utils", develop = true}
model = { path = "../model", develop = true }
database = {path = "../database", develop = true}

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
